name:                CspBookHs
version:             0.1.0.0
synopsis:            Some CSP implementations
description:         Please see README.md
homepage:            https://github.com/rossng/CspBookHs#readme
license:             BSD3
license-file:        LICENSE
author:              Ross Gardiner
maintainer:          ross-public@gmx.com
copyright:           2016 Ross Gardiner
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Csp.Csp
                     , Csp.Examples
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable CspBookHs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CspBookHs
  default-language:    Haskell2010

test-suite CspBookHs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CspBookHs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rossng/CspBookHs
